--- a/src/components/Layout/Container.module.css
+++ b/src/components/Layout/Container.module.css
@@ -4,9 +4,26 @@
     font-family: 'Ubuntu', sans-serif;
     height: auto;
     min-height: 100px;
+    min-width: 600px;
     width: calc(100vw * 0.7);
-    border-radius: 15px;
-    position: fixed;
-    top: 500px;
+    border-radius: 20px;
+    position: relative;
+    top: 60px;
     left: calc(100vw * 0.15);
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    animation: meals-appear 1s ease-out forwards;
 }
+
+@keyframes meals-appear {
+    from {
+      opacity: 0;
+      transform: translateY(4rem);
+    }
+  
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
