Meal Item Wrapper

--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,3 +1,8 @@
 .meal-item {
     background-color: whitesmoke;
+    display: inline-block;
+    font-family: 'Ubuntu', sans-serif;
+    position: relative;
+    left: 20px;
+    display: flex;
 }
