--- a/src/components/Layout/Header/Sticker.module.css
+++ b/src/components/Layout/Header/Sticker.module.css
@@ -1,8 +1,9 @@
 
 .header {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
+    z-index: 5;
     width: 100%;
     height: 5rem;
     background-color: #c34f3f;
@@ -11,67 +12,21 @@
     min-width: 600px;
 }
 
+.sticker {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5rem;
+    background-color: #c34f3f;
+}
+
 .header h2 {
     margin-left: 5rem;
     font-size: 32px;
     width: fit-content;
     letter-spacing: 3px;
     position: fixed;
-    top: -0.5rem;
+    top: -0.3rem;
 }
 
-.header button {
-    background-color: #272323;
-    color: white;
-    font-family: 'Ubuntu', sans-serif;
-    letter-spacing: 1.2px;
-    display: block;
-    position: fixed;
-    top: 1.5em;
-    right: 5em;
-    font-size: 14px;
-    width: 16em;
-    height: 2.7em;
-    border-radius: 20px;
-    border-style: none;
-    opacity: 0.7;
-}
-
-.header p {
-    display: inline-block;
-    position: fixed;
-    top: 2em;
-    right: 10em;
-    color: white;
-}
-
-.items-number {
-    display: inline-block;
-    background-color: #cd2121;
-    border-radius: 10px;
-    height: 25px;
-    width: 35px;
-    position: fixed;
-    top: 2em;
-    right: 7em;
-}
-
-.items-number label {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 600;
-    width: 25px;
-    position: fixed;
-    top: 1.9em;
-    right: 6.4em;
-}
-
-
-.font-basket {
-    display: inline-block;
-    position: fixed;
-    top: 2em;
-    right: 16em;   
-}
