--- a/api/src/components/Meals/AvailableMeals.module.css
+++ b/api/src/components/Meals/AvailableMeals.module.css
@@ -20,6 +20,12 @@
   .meals li:last-child {
     border-bottom: none;
   }
+
+  .meals p {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 22px;
+  }
   
   @keyframes meals-appear {
     from {
