--- a/api/src/components/LogginForm/UserAuthForm.module.css
+++ b/api/src/components/LogginForm/UserAuthForm.module.css
@@ -8,7 +8,7 @@
 .control {
   margin: 1rem 0;
   display: flex;
-  align-items: stretch;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -50,7 +50,8 @@
 @media (min-width: 768px) {
   .control {
     align-items: center;
-    flex-direction: row;
+    /* align-items: stretch; */
+    flex-direction: column;
   }
 
 }
