--- a/api/src/components/Fontello-Fonts/fontello-auth/css/fontello.css
+++ b/api/src/components/Fontello-Fonts/fontello-auth/css/fontello.css
@@ -44,7 +44,7 @@
   margin-left: .2em;
 
   /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
+  font-size: 80%;
 
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
