--- a/api/src/components/Layout/Container/Container.module.css
+++ b/api/src/components/Layout/Container/Container.module.css
@@ -4,7 +4,7 @@
     font-family: 'Ubuntu', sans-serif;
     height: auto;
     min-height: 100px;
-    min-width: 1000px;
+    min-width: 500px;
     width: calc(100vw * 0.7);
     border-radius: 20px;
     position: relative;
@@ -25,5 +25,11 @@
     to {
       opacity: 1;
       transform: translateY(0);
+    }
+  }
+
+  @media (max-width: 768px) {
+    .container {
+      width: calc(100vw * 0.7);
     }
   }
