--- a/api/src/components/Layout/Header/CartButton.module.css
+++ b/api/src/components/Layout/Header/CartButton.module.css
@@ -88,3 +88,27 @@
     }
   }
   
+ 
+  @media (max-width: 768px) {
+    .txt {
+      display: none;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .cart-button {
+      width: 7em;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .font-basket {
+      right: 0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .cart-button.items-number {
+      left: 0;
+    }
+  }
