--- a/api/src/components/Layout/Header/MealsSummary.css
+++ b/api/src/components/Layout/Header/MealsSummary.css
@@ -1,6 +1,6 @@
 .meals-summary {
     background-color: #272727;
-    min-width: 500px;
+    /* min-width: 500px; */
     width: calc(100vw * 0.5);
     height: auto;
     margin-left: calc(100vw * 0.25);
@@ -44,4 +44,30 @@ p {
       opacity: 1;
       transform: scaleX(1rem);
     }
+}
+
+@media (max-width: 1100px) and (min-width: 758px) {
+  .meals-summary {
+    width: calc(100vw * 0.6);
+    margin-left: calc(100vw * 0.2);
+    /* margin-top: calc(100vh * -0.3); */
+    margin-top: -85px;
+  }
+}
+
+/* Maximum width */
+@media (max-width: 768px) {
+  .meals-summary {
+    width: calc(100vw * 0.7);
+    margin-left: calc(100vw * 0.15);
+    margin-top: -100px;
+  }
+
+  .meals-summary h2 {
+    font-size: 18px;
+  }
+
+  p {
+    font-size: 12px;
+  }
 }
