--- a/api/src/components/Layout/Header/Sticker.module.css
+++ b/api/src/components/Layout/Header/Sticker.module.css
@@ -34,15 +34,15 @@
 .font-basket {
     display: inline-block;
     position: fixed;
-    top: 0.75rem;
+    top: 1.2rem;
     right: 45px;
     z-index: 10;
     opacity: 1; 
     color: white;
-    height: 3.5rem;
-    width: 3.5rem;
+    /* height: 3.5rem; */
+    /* width: 3.5rem; */
     text-align: center;
-    padding-top: 10px;
+    /* padding-top: 10px; */
   }
   
   .font-basket:hover {
@@ -59,4 +59,16 @@
 
   .btn:hover {
     cursor: pointer;
+  }
+
+  @media (min-width: 768px) {
+    .mobile {
+      display: none;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .desktop {
+      display: none;
+    }
   }
