--- a/api/src/components/Layout/Header/Image.css
+++ b/api/src/components/Layout/Header/Image.css
@@ -12,10 +12,12 @@
 /* Maximum width */
 @media (max-width: 768px) {
     .main-img {
-        width: auto;
-        height: calc(100vh * 0.3);
-         clip-path: inset(0 calc(100%- 210px) 0 210px round 0);
+        width: 1000px;
+        /* width: auto; */
+        /* height: calc(100vh * 0.1vw); */
+        height: auto;
+         clip-path: inset(0 calc(100%- 215px) 100px 215px round 0);
          position: relative;
-         right: 210px;
+         right: 200px;
     }
   }
