--- a/api/src/components/Meals/AddMealForm.module.css
+++ b/api/src/components/Meals/AddMealForm.module.css
@@ -7,8 +7,9 @@
     left: 5em;
     width: 40%; */
     position: fixed;
-    right: 5em;
+    right: 4.5em;
     text-align: center;
+    display: inline-block;
 }
 
 .items-num {
@@ -17,3 +18,14 @@
     margin: 0;
 }
 
+@media (min-width: 768px) and (max-width: 1100px) {
+    .form {
+        right: calc(100vw * 0.05)
+    }
+  }
+
+@media (max-width: 768px) {
+    .form {
+        right: 3em;
+    }
+  }
