--- a/api/src/components/Layout/Header/Image.css
+++ b/api/src/components/Layout/Header/Image.css
@@ -12,11 +12,10 @@
 /* Maximum width */
 @media (max-width: 768px) {
     .main-img {
+        overflow-clip-margin: content-box;
         width: 1000px;
-        /* width: auto; */
-        /* height: calc(100vh * 0.1vw); */
         height: auto;
-         clip-path: inset(0 calc(100%- 215px) 100px 215px round 0);
+         /* clip-path: inset(0 calc(100%- 215px) 100px 215px round 0); */
          position: relative;
          right: 200px;
     }
