--- a/api/src/components/Layout/Header/MealsSummary.css
+++ b/api/src/components/Layout/Header/MealsSummary.css
@@ -59,7 +59,7 @@ p {
 @media (max-width: 768px) {
   .meals-summary {
     width: calc(100vw * 0.7);
-    margin-left: calc(100vw * 0.15 + 5px);
+    margin-left: calc(100vw * 0.15 - 5px);
     margin-top: -100px;
   }
 
