--- a/api/src/components/Layout/Header/MealsSummary.css
+++ b/api/src/components/Layout/Header/MealsSummary.css
@@ -49,8 +49,7 @@ p {
 @media (max-width: 1100px) and (min-width: 758px) {
   .meals-summary {
     width: calc(100vw * 0.6);
-    margin-left: calc(100vw * 0.2);
-    /* margin-top: calc(100vh * -0.3); */
+    margin-left: calc((100vw - calc(100vw * 0.6)) / 2);
     margin-top: -85px;
   }
 }
@@ -59,7 +58,7 @@ p {
 @media (max-width: 768px) {
   .meals-summary {
     width: calc(100vw * 0.7);
-    margin-left: calc(100vw * 0.15 - 5px);
+    margin-left: calc((100vw - calc(100vw * 0.7)) / 2);
     margin-top: -100px;
   }
 
