--- a/api/src/components/UI/CardAuth.module.css
+++ b/api/src/components/UI/CardAuth.module.css
@@ -5,5 +5,5 @@
     font-family: 'Ubuntu', sans-serif;
     position: relative;
     /* left: 20px; */
-    min-width: fit-content;
+    /* min-width: fit-content; */
 }
