--- a/api/src/components/Meals/AddMealForm.module.css
+++ b/api/src/components/Meals/AddMealForm.module.css
@@ -32,6 +32,7 @@
 
   @media (max-width: 440px) {
     .form {
-        right: 20px;
+        right: 10px;
+        flex-direction: column;
     }
   }
