--- a/api/src/components/Cart/CartItem.module.css
+++ b/api/src/components/Cart/CartItem.module.css
@@ -5,6 +5,7 @@
   border-bottom: 2px solid #8a2b06;
   padding: 1rem 0;
   margin: 1rem 0;
+  overflow: hidden;
 }
 
 .cart-item h2 {
@@ -62,4 +63,28 @@
 .cart-item button:active {
   background-color: #8a2b06;
   color: white;
+}
+
+@media (max-width: 768px) {
+  .cart-item {
+    padding: 0.25rem 0;
+    margin: 0.5rem 0;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+  .cart-item h2 {
+    font-size: 18px;
+  }
+  .amount {
+    border: 0px solid #ccc;
+    padding: 0;
+  }
+  .price {
+    font-size: 16px;
+  }
+  .cart-item ul {
+    -webkit-box-shadow: inset -7px -22px 24px -32px rgba(66, 68, 90, 1);
+    -moz-box-shadow: inset -7px -22px 24px -32px rgba(66, 68, 90, 1);
+    box-shadow: inset -7px -22px 24px -32px rgba(66, 68, 90, 1);
+  }
 }
