--- a/api/src/components/Cart/SubmitForm.module.css
+++ b/api/src/components/Cart/SubmitForm.module.css
@@ -5,6 +5,8 @@
     overscroll-behavior: contain;
     overflow-x: hidden;
     z-index: 15;
+    border-top: 1px solid #8a2b06;
+    padding-top: 10px;
   }
   
   .control {
@@ -75,4 +77,11 @@
 
   .error-text {
     color: #b40e0e;
+  }
+
+  @media (max-width: 768px) {
+    .actions {
+      padding-top: 5px;
+      justify-content: center;
+    }
   }
